@@ -81,6 +81,7 @@ $VERSION = "0.0199804021";
 
 use strict;
 no strict 'refs';
+use vars (qw($str));
 use IO::File;
 use Mj::Log;
 use Mj::List;
@@ -781,7 +782,7 @@ regexp syntax checker.
 sub _re_match {
   my $safe = shift;
   my $re   = shift;
-  my $str  = shift;
+  local $str  = shift;
 #  my $log  = new Log::In 200, "$re, $str";
   my $match;
   return 1 if $re eq 'ALL';
@@ -793,7 +794,8 @@ sub _re_match {
   $re =~ /(.*)/;
   $re = $1;
 
-  $match = $safe->reval("'$str' =~ $re");
+  $safe->share('$str');
+  $match = $safe->reval("\$str =~ $re");
   if (wantarray) {
     return ($match, $@);
   }
